<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.editTask.EditTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrow"
            android:background="@drawable/arrow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="34dp"
            android:layout_marginTop="38dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/add_task"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:hint="@string/title"
            app:layout_constraintTop_toBottomOf="@id/arrow"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="94dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="42dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:hint="@string/category"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="42dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/importanceText"
            android:text="@string/importance"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/category"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="34dp"
            android:layout_marginTop="40dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/importance"
            app:layout_constraintTop_toBottomOf="@id/importanceText"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/measure1"
            android:src="@drawable/measure"
            app:layout_constraintTop_toBottomOf="@id/importance"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/urgencyText"
            android:text="@string/urgency"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/measure1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="34dp"
            android:layout_marginTop="40dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/urgency"
            app:layout_constraintTop_toBottomOf="@id/urgencyText"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/measure2"
            android:src="@drawable/measure"
            app:layout_constraintTop_toBottomOf="@id/urgency"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:background="@drawable/button"
            app:layout_constraintTop_toBottomOf="@id/measure2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="88dp"
            android:text="@string/save_task"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>