<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/head"
        android:text="@string/my_dashboard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginStart="25dp"
        android:layout_marginTop="41dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lamp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="72dp"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about"
        android:background="@drawable/info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/head"
        android:layout_marginTop="39dp"
        android:paddingBottom="128dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/doItNow"
                android:background="@drawable/back_green"
                android:layout_marginHorizontal="14dp"
                android:paddingBottom="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:text="@string/do_it_now"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="49dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/importance"
                    android:text="@string/urgent_and_important"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_15"
                    android:textSize="48sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/importance"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="38dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/decide"
                android:background="@drawable/back_blue"
                android:layout_marginHorizontal="14dp"
                android:paddingBottom="48dp"
                android:layout_marginTop="22dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title2"
                    android:text="@string/decide_when_to_do"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="49dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/importance2"
                    android:text="@string/important_not_urgent"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/title2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_14"
                    android:textSize="48sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/title2"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="38dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delegate"
                android:background="@drawable/back_red"
                android:layout_marginHorizontal="14dp"
                android:paddingBottom="48dp"
                android:layout_marginTop="22dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title3"
                    android:text="@string/delegate_it"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="49dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/importance3"
                    android:text="@string/urgent_not_important"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/title3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_04"
                    android:textSize="48sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/importance3"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="38dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dump"
                android:background="@drawable/back_yellow"
                android:layout_marginHorizontal="14dp"
                android:paddingBottom="48dp"
                android:layout_marginTop="22dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/title4"
                    android:text="@string/dump_it"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="49dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/importance4"
                    android:text="@string/not_important_not_urgent"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/title4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_11"
                    android:textSize="48sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/importance4"
                    android:layout_marginStart="38dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="38dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:background="@drawable/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="34dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>