<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.detailsFragment.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrow"
            android:background="@drawable/arrow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="34dp"
            android:layout_marginTop="38dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/task_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/heart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="34dp"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emoji"
            android:src="@drawable/apple"
            app:layout_constraintTop_toBottomOf="@+id/arrow"
            android:layout_marginTop="79dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mini"
            android:src="@drawable/mini_back"
            app:layout_constraintTop_toBottomOf="@id/emoji"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="58dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/miniText"
            app:layout_constraintTop_toBottomOf="@id/emoji"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="58dp"
            android:layout_marginStart="74dp"
            android:text="@string/dribble_shot"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/finish_einsen_app_ui_ux"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mini"
            android:layout_marginStart="58dp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details"
            android:text="The Eisenhower Matrix has four quadrants along two axes: importance and urgency.

For every activity or task, ask yourself: It is important or not? Is it urgent or not?"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:paddingStart="58dp"
            android:layout_marginTop="24dp"
            android:paddingEnd="59dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/divider"
            android:src="@drawable/divider"
            app:layout_constraintTop_toBottomOf="@id/details"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="64dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/urgency"
            android:text="@string/_03"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_marginStart="88dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/importance"
            android:text="@string/_04"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/urgencyText"
            android:text="@string/urgency"
            app:layout_constraintTop_toBottomOf="@id/urgency"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="9dp"
            android:layout_marginStart="71dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/importanceText"
            android:text="@string/importance"
            app:layout_constraintTop_toBottomOf="@id/importance"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="71dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            android:background="@drawable/delete"
            app:layout_constraintTop_toBottomOf="@id/urgencyText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="105dp"
            android:layout_marginStart="27dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit"
            android:background="@drawable/edit"
            app:layout_constraintTop_toBottomOf="@id/urgencyText"
            app:layout_constraintLeft_toRightOf="@id/delete"
            android:layout_marginTop="105dp"
            android:layout_marginStart="25dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share"
            android:background="@drawable/share"
            app:layout_constraintTop_toBottomOf="@id/urgencyText"
            app:layout_constraintLeft_toRightOf="@id/edit"
            android:layout_marginTop="105dp"
            android:layout_marginStart="25dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/save"
            app:layout_constraintTop_toBottomOf="@id/importanceText"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="27dp"
            android:text="@string/complete"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ok"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>